Upgrade to Java 21 LTS + Spring Boot 3.4 with modern design patterns (#3)
* Upgrade to Java 21 + Spring Boot 3.4.4 with records, virtual threads, Instant, and ProblemDetail

Agent-Logs-Url: https://github.com/iamankushpandit/fluffy/sessions/05c2530f-6dd8-4552-a614-41c9fbd8f791

Co-authored-by: iamankushpandit <16137085+iamankushpandit@users.noreply.github.com>

* Update README, CONTRIBUTING, and docs for Java 21 + Spring Boot 3.4 upgrade

Agent-Logs-Url: https://github.com/iamankushpandit/fluffy/sessions/05c2530f-6dd8-4552-a614-41c9fbd8f791

Co-authored-by: iamankushpandit <16137085+iamankushpandit@users.noreply.github.com>

* Simplify redundant null check in JobLauncher (parameters() guaranteed non-null by record)

Agent-Logs-Url: https://github.com/iamankushpandit/fluffy/sessions/05c2530f-6dd8-4552-a614-41c9fbd8f791

Co-authored-by: iamankushpandit <16137085+iamankushpandit@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: iamankushpandit <16137085+iamankushpandit@users.noreply.github.com>